[package]
authors = ["llc1123 <i@llc.moe>"]
edition = "2021"
name = "napi-unix-dgram"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["async"] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = { version = "0.1" }

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
